# toascii

./: .gitignore  .ocamlformat  README.md  dub.sdl  dub.selections.json  dune-project  toascii.opam
lib/: dune  replacements.ml  unidecode.ml
source/: app.d
test/: dune  test_toascii.ml
tools/: dump_stringex.d
